--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                 </div>
             </div>
             <div class="card text-center m-3 mt-5" style="width: 18rem;">
-                <img src="./img/adamadourada.jpg" alt="">
+                <img src="./img/coachcarter.jpg" alt="">
                 <div class="card-body">
-                    <h5 class="card-title">A Dama Dourada</h5>
+                    <h5 class="card-title">Coach Carter</h5>
                     <a href="https://www.youtube.com/watch?v=VpERSWBPi1U" class="btn btn-primary mt-3"
                         target="_blank">Assistir</a>
                 </div>
@@ -209,7 +209,7 @@
                 <img src="./img/orgulhoepreconceito.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Orgulho e Preconceito</h5>
-                    <a href="https://www.youtube.com/watch?v=1dYv5u6v55Y&t=8s" class="btn btn-primary mt-3"
+                    <a href="https://www.youtube.com/watch?v=n88f0w0Fddg" class="btn btn-primary mt-3"
                         target="_blank">Assistir</a>
                 </div>
             </div>
