arrumando layout grid

--- a/index.html
+++ b/index.html
@@ -30,35 +30,36 @@
         </ul>
     </div>
 
-    <main class="mt-5">
+    <main class="mt-5 container">
         <h2>TODAS AS CATEGORIAS</h2>
         <h2 class="mt-5">HUMOR</h2>
-        <section class="d-flex align-items-stretch">
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+
+        <section class="row d-flex align-items-stretch">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/asbranquelas.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">As Branquelas</h5>
-                    <a href="https://www.youtube.com/watch?v=z7fOQZWJyQA" class="btn btn-primary mt-3 "
+                    <a href="https://www.youtube.com/watch?v=z7fOQZWJyQA" class="btn btn-primary"
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/minhamaeeumapeca.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Minha mãe é uma peça</h5>
-                    <a href="https://www.youtube.com/watch?v=5xlR-kDSxgg" class="btn btn-primary mt-3"
+                    <a href="https://www.youtube.com/watch?v=5xlR-kDSxgg" class="btn btn-primary"
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/amentira.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">A Mentira</h5>
-                    <a href="https://www.youtube.com/watch?v=LiDd_jpVCrc" class="btn btn-primary mt-3"
+                    <a href="https://www.youtube.com/watch?v=LiDd_jpVCrc" class="btn btn-primary"
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/umprincipeemnovaiorque.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Um Príncipe em Nova York</h5>
@@ -66,7 +67,8 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/gentegrande.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Gente Grande</h5>
@@ -74,11 +76,13 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
+
         </section>
 
         <h2 class="mt-5">FILMES BASEADOS EM HISTÓRIAS REAIS</h2>
-        <section class="d-flex align-items-stretch">
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+
+        <section class="row d-flex align-items-stretch">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/estrelasalemdotempo.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Estrelas Além do Tempo</h5>
@@ -86,7 +90,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/thepostaguerrasecreta.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">The Post A Guerra Secreta</h5>
@@ -94,7 +98,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/historiascruzadas.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Histórias Cruzadas</h5>
@@ -102,7 +106,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/erinbrockovich.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Erin Brockovich</h5>
@@ -110,7 +114,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/joyonomedosucesso.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Joy: O Nome do Sucesso</h5>
@@ -119,8 +123,9 @@
                 </div>
             </div>
         </section>
-        <section class="d-flex align-items-stretch">
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+
+        <section class="row d-flex align-items-stretch">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/ojogodaimitacao.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Jogo da Imitação</h5>
@@ -128,7 +133,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/odiscursodorei.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Discurso do Rei</h5>
@@ -136,7 +141,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/umamentebrilhante.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Uma Mente Brilhante</h5>
@@ -144,7 +149,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/agrandeaposta.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">A Grande Aposta</h5>
@@ -152,7 +157,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/intocaveis.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Intocáveis</h5>
@@ -161,8 +166,9 @@
                 </div>
             </div>
         </section>
-        <section class="d-flex align-items-stretch">
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+
+        <section class="row d-flex align-items-stretch">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/sniperamericano.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Sniper Americano</h5>
@@ -170,7 +176,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/aduquesa.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">A Duquesa</h5>
@@ -178,7 +184,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/extraordinario.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Extraordinário</h5>
@@ -186,7 +192,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/umsonhopossivel.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Um Sonho Possível</h5>
@@ -194,7 +200,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/coachcarter.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Coach Carter</h5>
@@ -204,8 +210,8 @@
             </div>
         </section>
         <h2 class="mt-5">DRAMA</h2>
-        <section class="d-flex align-items-stretch">
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+        <section class="row d-flex align-items-stretch">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/orgulhoepreconceito.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Orgulho e Preconceito</h5>
@@ -213,7 +219,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/questaodetempo.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Questão de Tempo</h5>
@@ -221,7 +227,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/oladobomdavida.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Lado Bom da Vida</h5>
@@ -229,7 +235,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/ocondedemontecristo.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Conde de Monte Cristo</h5>
@@ -237,7 +243,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/ocontador.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Contador</h5>
@@ -246,8 +252,8 @@
                 </div>
             </div>
         </section>
-        <section class="d-flex align-items-stretch">
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+        <section class="row d-flex align-items-stretch">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/genioindomavel.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Gênio Indomável</h5>
@@ -255,7 +261,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/osagentesdodestino.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Os Agentes do Destino</h5>
@@ -263,7 +269,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/ograndegatsby.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Grande Gatsby</h5>
@@ -271,7 +277,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/passageiros.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Passageiros</h5>
@@ -279,7 +285,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/perdidoemmarte.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Perdido em Marte</h5>
@@ -289,8 +295,8 @@
             </div>
         </section>
         <h2 class="mt-5">DESASTRES NATURAIS</h2>
-        <section class="d-flex align-items-stretch">
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+        <section class="row d-flex align-items-stretch">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/odiadepoisdeamanha.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Dia Depois de Amanhã</h5>
@@ -298,7 +304,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/twister.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Twister</h5>
@@ -306,7 +312,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/oinfernodedante.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">O Inferno de Dante</h5>
@@ -314,7 +320,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/sanandreas.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">San Andreas</h5>
@@ -322,7 +328,7 @@
                         target="_blank">Assistir</a>
                 </div>
             </div>
-            <div class="card text-center m-3 mt-5" style="width: 18rem;">
+            <div class="col-xl card text-center m-3 mt-5" style="width: 18rem;">
                 <img src="./img/volcano.jpg" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Volcano</h5>
